# onboarding

./: .gitignore  Cargo.toml  README.md  localnet_config.json
artifacts/: calling_modules_and_contracts.wasm  checksums.txt  minimal_contract.wasm
artifacts/contracts/: astroport_factory.wasm  astroport_oracle.wasm  astroport_pair.wasm  astroport_pair_stable.wasm  astroport_token.wasm  balance_tracker.wasm  before_send_hook_test.wasm  checksums.txt  client_updater.wasm  credits.wasm  cron.wasm  cw20_merkle_airdrop.wasm  dex.wasm  dex_grpc.wasm  dex_stargate.wasm  echo.wasm  grpc_querier.wasm  ibc_transfer.wasm  lockdrop_vault_for_cl_pools.wasm  marketmap.wasm  msg_receiver.wasm  neutron_auction.wasm  neutron_interchain_queries.wasm  neutron_interchain_txs.wasm  neutron_lockdrop.wasm  neutron_lockdrop_pcl.wasm  neutron_price_feed.wasm  neutron_price_feed_mock.wasm  neutron_validators_test.wasm  oracle.wasm  reflect.wasm  stargate_querier.wasm  tokenfactory.wasm  vesting_lp.wasm  vesting_lp_pcl.wasm  vesting_lp_vault_for_cl_pools.wasm  vesting_lti.wasm  vesting_managed.wasm
artifacts/scripts/: init-neutrond.sh
calling_modules_and_contracts/: Cargo.toml
calling_modules_and_contracts/artifacts/: calling_modules_and_contracts.wasm  checksums.txt
calling_modules_and_contracts/src/: contract.rs
contracts/calling_modules_and_contracts/: Cargo.toml
contracts/calling_modules_and_contracts/src/: contract.rs
dockerfiles/: build-all.sh
dockerfiles/gaia/: Dockerfile  build.sh
dockerfiles/hermes/: Dockerfile  build.sh
dockerfiles/neutron-query-relayer/: build.sh
minimal_contract/: Cargo.toml
minimal_contract/artifacts/: checksums.txt  minimal_contract.wasm
minimal_contract/src/: contract.rs
minimal_ui/: package-lock.json  package.json
(+8 files in other folders)
