[package]
name = "minimal_contract"
description = "A minimal CosmWasm smart contract on Neutron"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/neutron-org/onboarding"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "1.3.0", features = ["ibc3"] }
cosmwasm-schema = {version = "1.3.0"}
cosmwasm-storage = { version = "1.3.0" }
cw-storage-plus = "1.1.0"
serde = { version = "1.0.203", features = ["derive"] }
schemars = "0.8.8"
thiserror = { version = "1.0" }
neutron-sdk = "0.10.0"
