[package]
name = "calling_modules_and_contracts"
description = "A example contract that interacts with other contracts and with Neutron modules"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/neutron-org/onboarding"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "=2.1.0", features = [
    "stargate",
    "staking",
    "cosmwasm_1_1",
    "cosmwasm_1_2",
    "cosmwasm_1_3",
    "cosmwasm_1_4",
    "cosmwasm_2_0",
] }
cosmwasm-schema = { version = "2.1.0", default-features = false }
cw-storage-plus = "2.0.0"
serde = { version = "1.0.203", features = ["derive"] }
schemars = "0.8.8"
thiserror = { version = "1.0" }
neutron-sdk = "0.11.0"
neutron-std = { package = "neutron-std", git = "https://github.com/neutron-org/neutron-std", branch = "main" }
minimal_contract = { path = "../minimal_contract" }
